<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="night_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="android_address">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_address">Dassenka@yandex.ru</string>
    <string name="support_themes">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="update">Обновить</string>
    <string name="internet_error">Проблемы со связью\n \nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="error_message">Ничего не нашлось</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history_button">Очистить историю</string>
    <string name="country">Страна</string>
    <string name="primaryGenreName">Жанр</string>
    <string name="releaseDate">Год</string>
    <string name="collectionName">Альбом</string>
    <string name="trackTimeMillis">Длительность</string>
    <string name="progressTrackTime">00:00</string>
    <string name="empty_favorite_tracks">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="button_add_playlists">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="favorite_playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="input_playlist_name">Название*</string>
    <string name="input_playlist_description">Описание</string>
    <string name="create_new_playlist">Создать</string>
    <string name="toast_confirm_create_playlist">Плейлист "%s" создан</string>
    <string name="permission_needs_rationale">Для установки обложки плейлиста необходимо предоставить разрешение на доступ в галерею</string>
    <string name="confirm_dialog_new_playlist_title">Завершить создание плейлиста?</string>
    <string name="confirm_dialog_new_playlist_message">Все несохраненные данные будут потеряны</string>
    <string name="confirm_dialog_cancel">Отмена</string>
    <string name="confirm_dialog_complete">Завершить</string>
    <string name="title_bottom_sheet">Добавить в плейлист</string>
    <string name="toast_confirm_add_track_in_playlist">Добавлено в плейлист "%s"</string>
    <string name="toast_denied_add_track_in_playlist">Трек уже добавлен в плейлист "%s"</string>
    <string name="empty_playlist">Вы не добавили\nни одного трека</string>
    <string name="delete_track_dialog_title">Удалить трек</string>
    <string name="delete_track_dialog_message">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete_track_dialog_delete">Удалить</string>
    <string name="no_tracks_for_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_playlist">Поделиться</string>
    <string name="editing_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_dialog_message">Хотите удалить плейлист?</string>
    <string name="delete_playlist_dialog_no">Нет</string>
    <string name="delete_playlist_dialog_yes">Да</string>
    <string name="headerTitle_editing_playlist">Редактировать</string>
    <string name="button_editing_playlist">Сохранить</string>
    <string name="playlist_time">00 минут</string>
    <string name="playlist_no_tracks">0 треков</string>
</resources>