<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SettingsBackgroundStyle"
    tools:context=".search.ui.SearchActivity">

    <LinearLayout
        android:id="@+id/backToMainActivity"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <ImageView
            style="@style/BackMainActivityStyle"
            android:layout_marginStart="@dimen/padding_for_settings"
            android:layout_marginTop="@dimen/padding_for_settings"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            style="@style/BackMainActivityStyle"
            android:layout_marginStart="28dp"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/search"
            android:textFontWeight="500"
            android:textSize="@dimen/text_size"
            tools:targetApi="p" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/InputEditText"
            style="@style/InputEditText"
            android:drawableStart="@drawable/ic_search_hint"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/clearIcon"
            style="@style/ClearIcon"
            android:src="@drawable/ic_clear_button" />
    </FrameLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_gravity="center"
        android:layout_width="@dimen/progressbar_size"
        android:layout_height="@dimen/progressbar_size"
        android:layout_marginTop="@dimen/margin_top_progressbar"
        android:indeterminateTint="@color/blue"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        style="@style/TrackRecyclerView"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/track_card" />

    <LinearLayout
        android:id="@+id/placeholder_message_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="110dp"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/internet_error"
            style="@style/InternetError"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/search_error"
            style="@style/SearchError"
            android:visibility="gone" />

        <TextView
            android:id="@+id/error_message"
            style="@style/ErrorMessage"
            tools:text="Some text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_update"
            style="@style/ButtonUpdate"
            android:text="@string/update"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:enabled="true"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/search_history_message"
            style="@style/ErrorMessage"
            android:text="@string/search_history"
            android:textFontWeight="400" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_search_history"
            style="@style/TrackRecyclerView"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/track_card" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_clear_history"
            style="@style/ButtonClearHistory"
            android:text="@string/clear_history_button"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:enabled="true"/>
    </LinearLayout>
</LinearLayout>