<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/PlayerBackgroundStyle"
    tools:context=".player.ui.PlayerActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/activity_player_guideline_padding" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/activity_player_guideline_padding" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="280dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/attributesBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_tags="countryTag, primaryGenreNameTag, releaseDateTag, collectionNameTag, trackTimeMillisTag" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/collectionNameGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="collectionName,trackCollectionName" />

    <TextView
        android:id="@+id/country"
        style="@style/DefaultTextPlayer"
        android:layout_marginStart="@dimen/attributes_margin_from_guideline"
        android:layout_marginBottom="28dp"
        android:text="@string/country"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTag="countryTag" />

    <TextView
        android:id="@+id/primaryGenreName"
        style="@style/DefaultTextPlayer"
        android:text="@string/primaryGenreName"
        android:layout_marginBottom="@dimen/margin_between_attributes"
        app:layout_constraintBottom_toTopOf="@id/country"
        app:layout_constraintStart_toStartOf="@+id/country"
        app:layout_constraintTag="primaryGenreNameTag" />

    <TextView
        android:id="@+id/releaseDate"
        style="@style/DefaultTextPlayer"
        android:text="@string/releaseDate"
        android:layout_marginBottom="@dimen/margin_between_attributes"
        app:layout_constraintBottom_toTopOf="@id/primaryGenreName"
        app:layout_constraintStart_toStartOf="@+id/country"
        app:layout_constraintTag="releaseDateTag" />

    <TextView
        android:id="@+id/collectionName"
        style="@style/DefaultTextPlayer"
        android:text="@string/collectionName"
        android:layout_marginBottom="@dimen/margin_between_attributes"
        app:layout_constraintBottom_toTopOf="@id/releaseDate"
        app:layout_constraintStart_toStartOf="@+id/country"
        app:layout_constraintTag="collectionNameTag" />

    <TextView
        android:id="@+id/trackTimeMillis"
        style="@style/DefaultTextPlayer"
        android:text="@string/trackTimeMillis"
        android:layout_marginBottom="@dimen/margin_between_attributes"
        app:layout_constraintBottom_toTopOf="@id/collectionName"
        app:layout_constraintStart_toStartOf="@+id/country"
        app:layout_constraintTag="trackTimeMillisTag"
        app:layout_goneMarginTop="@dimen/margin_between_attributes" />

    <TextView
        android:id="@+id/trackCountry"
        style="@style/TrackAttributesPlayer"
        android:layout_marginEnd="@dimen/attributes_margin_from_guideline"
        app:layout_constraintBottom_toBottomOf="@id/country"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/attributesBarrier"
        app:layout_constraintTag="trackCountryTag"
        tools:text="Some text" />

    <TextView
        android:id="@+id/trackPrimaryGenreName"
        style="@style/TrackAttributesPlayer"
        app:layout_constraintBottom_toBottomOf="@id/primaryGenreName"
        app:layout_constraintEnd_toEndOf="@+id/trackCountry"
        app:layout_constraintStart_toEndOf="@id/attributesBarrier"
        app:layout_constraintTag="trackPrimaryGenreNameTag"
        tools:text="Some text" />

    <TextView
        android:id="@+id/trackReleaseDate"
        style="@style/TrackAttributesPlayer"
        app:layout_constraintBottom_toBottomOf="@id/releaseDate"
        app:layout_constraintEnd_toEndOf="@+id/trackCountry"
        app:layout_constraintStart_toEndOf="@id/attributesBarrier"
        app:layout_constraintTag="trackReleaseDateTag"
        tools:text="Some text" />

    <TextView
        android:id="@+id/trackCollectionName"
        style="@style/TrackAttributesPlayer"
        app:layout_constraintBottom_toBottomOf="@id/collectionName"
        app:layout_constraintEnd_toEndOf="@+id/trackCountry"
        app:layout_constraintStart_toEndOf="@id/attributesBarrier"
        app:layout_constraintTag="trackCollectionNameTag"
        tools:text="Some text" />

    <TextView
        android:id="@+id/trackTime"
        style="@style/TrackAttributesPlayer"
        app:layout_constraintBottom_toBottomOf="@id/trackTimeMillis"
        app:layout_constraintEnd_toEndOf="@+id/trackCountry"
        app:layout_constraintStart_toEndOf="@id/attributesBarrier"
        app:layout_constraintTag="trackTimeTag"
        tools:text="Some text" />

    <ImageButton
        android:id="@+id/buttonPlay"
        style="@style/ButtonPlay"
        android:src="@drawable/ic_play_button"
        android:enabled="true"
        app:layout_constraintBottom_toBottomOf="@+id/horizontal_guideline"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="@+id/horizontal_guideline" />

    <ImageView
        android:id="@+id/addTrackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/horizontal_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="@+id/horizontal_guideline"
        app:srcCompat="@drawable/ic_add_track_button" />

    <ImageView
        android:id="@+id/likeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/horizontal_guideline"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        app:layout_constraintTop_toTopOf="@+id/horizontal_guideline"
        app:srcCompat="@drawable/ic_like_button" />

    <TextView
        android:id="@+id/progressTrackTime"
        style="@style/ProgressTrackTime"
        android:text="@string/progressTrackTime"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlay" />

    <TextView
        android:id="@+id/artistName"
        style="@style/ArtistNameAndTrackName"
        android:textSize="@dimen/artist_name_size"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlay"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        tools:text="Some text" />

    <TextView
        android:id="@+id/trackName"
        style="@style/ArtistNameAndTrackName"
        android:textSize="@dimen/text_size"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/artistName"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        tools:text="Some text" />

    <ImageButton
        android:id="@+id/backToSearchButton"
        style="@style/BackToSearchButton"
        android:layout_width="@dimen/size_back_to_search_button"
        android:layout_height="@dimen/size_back_to_search_button"
        android:layout_marginStart="@dimen/margin_back_to_search_button"
        android:layout_marginTop="@dimen/margin_back_to_search_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/album_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="24dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/trackName"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/backToSearchButton"
        app:srcCompat="@drawable/ic_placeholder_player"
        tools:ignore="ContentDescription"/>

</androidx.constraintlayout.widget.ConstraintLayout>